<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Hefestos</string>
    <string name="action_settings">Settings</string>
    <string name="error_localization">Sua localização não foi encontrada.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="resource_name">Insira o nome do recurso que você deseja procurar</string>
    <string name="location_not_found">Sua localização atual não foi encontrada e não será possível fazer essa consulta.</string>
    <string name="recursos_acessibilidade">Recursos para acessibilidade</string>
    <string name="confirmation_sms">Voce realmente deseja enviar um SMS de socorro?</string>
    <string name="message_sent">Mensagem enviada</string>
    <string name="message_not_sent">Mensagem não enviada</string>
    <string name="message_too_long">Mensagem muito longa <xliff:g>%1$s</xliff:g></string>
    <string name="message_sent_current_locale">Mensagem SOS enviada, localizacao atual: <xliff:g>%1$s</xliff:g></string>
    <string name="message_sos">Chamada <xliff:g>%1$s</xliff:g> em: <xliff:g>%2$s</xliff:g>.</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="clear">Limpar</string>
    <string name="save">Salvar</string>
    <string name="description">Descrição</string>
    <string name="mandatory_field">Preenchimento obrigatório</string>
    <string name="invalid_fields">Por favor, verifique todos os campos destacados</string>
    <string name="resource_created_successfully">Recurso criado com sucesso.</string>
    <string name="resource_not_created_successfully">Recurso não foi criado com sucesso. Por favor, tente novamente.</string>
    <string name="title_activity_recursos_lista_indoor">RecursosListaIndoorActivity</string>
    <string name="resource_type">Tipo de recurso:</string>
    <string name="name">Nome:</string>
</resources>
