<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/widget1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffffff"
        android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutRecursos1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="top"
        android:orientation="vertical" >


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4pt"
            android:src="@drawable/hefestos_logo" />

        <TextView
            android:id="@+id/tvTitulo1"
            style="@style/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recursos_acessibilidade"
            />
    </LinearLayout>

    <!-- Nome recurso -->

    <TextView
        android:id="@+id/widget4"
        style="@style/tvTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/edNome"
        style="@style/editTexts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLength="30"
        />

    <!-- Descricao recurso -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textViewDescricaoRecurso"
        android:layout_weight="0"
        style="@style/tvTexto"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDescricaoRecurso"
        android:layout_weight="0"
        style="@style/editTexts"
        android:maxLength="80"
        />

    <!-- Tipo de recurso-->

    <TextView
        android:id="@+id/widget40"
        style="@style/tvTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resource_type" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTipoRecurso"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:entries="@array/tipos_recursos"
        />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        >

        <Button
            android:id="@+id/btSave"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="onSaveButtonClicked"
            />

        <Button
            android:id="@+id/btClear"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:onClick="onClearButtonClicked"
            />
    </LinearLayout>

</LinearLayout>